cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/MultiProjectsErrorHighlightingTest/first/first.cpp

#include "lib_header.h"

int main202433_First() {
    MyClass202433_Yet_Other var;
    var.boo2();
    MyClass202433_Two var2;
    var2.boo();
   return pGlobal202433->field1; 
}
